--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-a7a41cf3-c508-4615-8017-8e9aa7a98149;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvc": "Server=localhost;Database=Seller_MVC;Trusted_Connection=True;"
   }
 }
